@@ -20,17 +20,13 @@ import com.navercorp.pinpoint.common.server.bo.SpanChunkBo;
 import com.navercorp.pinpoint.common.server.bo.SpanEventBo;
 import com.navercorp.pinpoint.common.server.bo.filter.SequenceSpanEventFilter;
 import com.navercorp.pinpoint.common.server.bo.filter.SpanEventFilter;
-import com.navercorp.pinpoint.common.server.util.AcceptedTimeService;
-import com.navercorp.pinpoint.common.server.util.EmptyAcceptedTimeService;
-import com.navercorp.pinpoint.grpc.Header;
 import com.navercorp.pinpoint.grpc.trace.PSpanChunk;
 import com.navercorp.pinpoint.grpc.trace.PSpanEvent;
 import com.navercorp.pinpoint.grpc.trace.PTransactionId;
 import com.navercorp.pinpoint.io.SpanVersion;
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -38,62 +34,64 @@ import java.util.List;
  */
 public class CollectorGrpcSpanFactoryTest {
     private static final int MAX_SEQUENCE = 10;
-    
+
     private final GrpcSpanBinder binder = new GrpcSpanBinder();
     private final SpanEventFilter filter = new SequenceSpanEventFilter(MAX_SEQUENCE);
-    private final AcceptedTimeService acceptedTimeService = new EmptyAcceptedTimeService(System.currentTimeMillis());
-    private final GrpcSpanFactory factory = new CollectorGrpcSpanFactory(binder, filter, acceptedTimeService);
+
+    private final BindAttribute attribute = newAttribute();
+
+    private BindAttribute newAttribute() {
+        return new BindAttribute("agentId", "applicationName", 88, System.currentTimeMillis());
+    }
+
+    private final GrpcSpanFactory factory = new CollectorGrpcSpanFactory(binder, filter);
 
     @Test
     public void buildSpanChunkBo_sequence_overflow_NPE() {
         final PSpanChunk chunk = newSpanChunk_overflow();
-        final Header header = newHeader();
 
-        SpanChunkBo spanChunkBo = factory.buildSpanChunkBo(chunk, header);
+        SpanChunkBo spanChunkBo = factory.buildSpanChunkBo(chunk, attribute);
 
         List<SpanEventBo> spanEventBoList = spanChunkBo.getSpanEventBoList();
-        Assert.assertTrue(spanEventBoList.isEmpty());
+        Assertions.assertTrue(spanEventBoList.isEmpty());
     }
 
     @Test
     public void buildSpanChunkBo_compact_depth() {
         final PSpanChunk chunk = newSpanChunk_compact_depth();
-        final Header header = newHeader();
 
-        SpanChunkBo spanChunkBo = factory.buildSpanChunkBo(chunk, header);
+        SpanChunkBo spanChunkBo = factory.buildSpanChunkBo(chunk, attribute);
 
         List<SpanEventBo> spanEventBoList = spanChunkBo.getSpanEventBoList();
 
         SpanEventBo spanEventBo0 = spanEventBoList.get(0);
         SpanEventBo spanEventBo1 = spanEventBoList.get(1);
-        Assert.assertEquals(1, spanEventBo0.getDepth());
-        Assert.assertEquals(1, spanEventBo1.getDepth());
+        Assertions.assertEquals(1, spanEventBo0.getDepth());
+        Assertions.assertEquals(1, spanEventBo1.getDepth());
     }
 
     @Test
     public void buildSpanChunkBo_compact_depth_NPE() {
         final PSpanChunk chunk = newSpanChunk_compact_depth_error();
-        final Header header = newHeader();
 
-        SpanChunkBo spanChunkBo = factory.buildSpanChunkBo(chunk, header);
+        SpanChunkBo spanChunkBo = factory.buildSpanChunkBo(chunk, attribute);
 
         List<SpanEventBo> spanEventBoList = spanChunkBo.getSpanEventBoList();
         SpanEventBo spanEventBo0 = spanEventBoList.get(0);
-        Assert.assertEquals(1, spanEventBo0.getDepth());
+        Assertions.assertEquals(1, spanEventBo0.getDepth());
     }
 
     @Test
     public void buildSpanChunkBo_first_depth_zero() {
         final PSpanChunk chunk = newSpanChunk_first_depth_zero();
-        final Header header = newHeader();
 
-        SpanChunkBo spanChunkBo = factory.buildSpanChunkBo(chunk, header);
+        SpanChunkBo spanChunkBo = factory.buildSpanChunkBo(chunk, attribute);
 
         List<SpanEventBo> spanEventBoList = spanChunkBo.getSpanEventBoList();
         SpanEventBo spanEventBo0 = spanEventBoList.get(0);
         SpanEventBo spanEventBo1 = spanEventBoList.get(1);
-        Assert.assertEquals(0, spanEventBo0.getDepth());
-        Assert.assertEquals(1, spanEventBo1.getDepth());
+        Assertions.assertEquals(0, spanEventBo0.getDepth());
+        Assertions.assertEquals(1, spanEventBo1.getDepth());
     }
 
 
@@ -135,7 +133,7 @@ public class CollectorGrpcSpanFactoryTest {
     private PSpanChunk newSpanChunk(PSpanEvent... events) {
         PSpanChunk.Builder builder = PSpanChunk.newBuilder();
         builder.setVersion(SpanVersion.TRACE_V2);
-        builder.addAllSpanEvent(Arrays.asList(events));
+        builder.addAllSpanEvent(List.of(events));
         builder.setTransactionId(PTransactionId.getDefaultInstance());
         return builder.build();
     }
@@ -148,9 +146,5 @@ public class CollectorGrpcSpanFactoryTest {
         return event.build();
     }
 
-
-    private Header newHeader() {
-        return new Header("test", "agentId", "agentName", "applicationName", 1000, 88, -1, null);
-    }
 
 }
