@@ -18,41 +18,37 @@ package com.navercorp.pinpoint.common.server.bo.serializer.trace.v2.bitfield;
 
 import com.navercorp.pinpoint.common.server.bo.AnnotationBo;
 import com.navercorp.pinpoint.common.server.bo.SpanEventBo;
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
+import java.util.List;
 
 /**
  * @author Woonduk Kang(emeroad)
  */
 public class SpanEventBitFieldTest {
-    @Test
-    public void isSetHasException() throws Exception {
-
-    }
 
     @Test
-    public void setHasException_shortToByteCasting() throws Exception {
+    public void setHasException_shortToByteCasting() {
         SpanEventBitField field = new SpanEventBitField();
         field.setHasException(true);
 
         byte byteField = (byte) field.getBitField();
 
         SpanEventBitField byteCastField = new SpanEventBitField(byteField);
-        Assert.assertTrue(byteCastField.isSetHasException());
+        Assertions.assertTrue(byteCastField.isSetHasException());
 
 
     }
 
     @Test
-    public void testRpc_first() throws Exception {
+    public void testRpc_first() {
         SpanEventBo spanEventBo = new SpanEventBo();
 
         spanEventBo.setRpc("Rpc");
 
         SpanEventBitField bitField = SpanEventBitField.buildFirst(spanEventBo);
-        Assert.assertFalse(bitField.isSetRpc());
+        Assertions.assertFalse(bitField.isSetRpc());
 
     }
 
@@ -63,10 +59,10 @@ public class SpanEventBitFieldTest {
         spanEventBo.setEndPoint("EndPoint");
 
         SpanEventBitField bitField = SpanEventBitField.buildFirst(spanEventBo);
-        Assert.assertTrue(bitField.isSetEndPoint());
+        Assertions.assertTrue(bitField.isSetEndPoint());
 
         bitField.setEndPoint(false);
-        Assert.assertFalse(bitField.isSetEndPoint());
+        Assertions.assertFalse(bitField.isSetEndPoint());
 
     }
 
@@ -77,10 +73,10 @@ public class SpanEventBitFieldTest {
         spanEventBo.setDestinationId("DestinationId");
 
         SpanEventBitField bitField = SpanEventBitField.buildFirst(spanEventBo);
-        Assert.assertTrue(bitField.isSetDestinationId());
+        Assertions.assertTrue(bitField.isSetDestinationId());
 
         bitField.setDestinationId(false);
-        Assert.assertFalse(bitField.isSetDestinationId());
+        Assertions.assertFalse(bitField.isSetDestinationId());
 
     }
 
@@ -92,10 +88,10 @@ public class SpanEventBitFieldTest {
         spanEventBo.setNextSpanId(1234);
 
         SpanEventBitField bitField = SpanEventBitField.buildFirst(spanEventBo);
-        Assert.assertTrue(bitField.isSetNextSpanId());
+        Assertions.assertTrue(bitField.isSetNextSpanId());
 
         bitField.setNextSpanId(false);
-        Assert.assertFalse(bitField.isSetNextSpanId());
+        Assertions.assertFalse(bitField.isSetNextSpanId());
 
     }
 
@@ -106,60 +102,60 @@ public class SpanEventBitFieldTest {
         spanEventBo.setExceptionInfo(100, "excetpion");
 
         SpanEventBitField bitField = SpanEventBitField.buildFirst(spanEventBo);
-        Assert.assertTrue(bitField.isSetHasException());
+        Assertions.assertTrue(bitField.isSetHasException());
 
         bitField.setHasException(false);
-        Assert.assertFalse(bitField.isSetHasException());
+        Assertions.assertFalse(bitField.isSetHasException());
 
     }
 
 
     @Test
-    public void testAnnotation_first() throws Exception {
+    public void testAnnotation_first() {
         SpanEventBo spanEventBo = new SpanEventBo();
 
-        spanEventBo.setAnnotationBoList(Collections.singletonList(new AnnotationBo(1, "test")));
+        spanEventBo.setAnnotationBoList(List.of(AnnotationBo.of(1, "test")));
 
         SpanEventBitField bitField = SpanEventBitField.buildFirst(spanEventBo);
-        Assert.assertTrue(bitField.isSetAnnotation());
+        Assertions.assertTrue(bitField.isSetAnnotation());
 
         bitField.setAnnotation(false);
-        Assert.assertFalse(bitField.isSetAnnotation());
+        Assertions.assertFalse(bitField.isSetAnnotation());
 
     }
 
 
     @Test
-    public void testNextAsyncId_first() throws Exception {
+    public void testNextAsyncId_first() {
         SpanEventBo spanEventBo = new SpanEventBo();
 
         spanEventBo.setNextAsyncId(1234);
 
         SpanEventBitField bitField = SpanEventBitField.buildFirst(spanEventBo);
-        Assert.assertTrue(bitField.isSetNextAsyncId());
+        Assertions.assertTrue(bitField.isSetNextAsyncId());
 
         bitField.setNextAsyncId(false);
-        Assert.assertFalse(bitField.isSetNextAsyncId());
+        Assertions.assertFalse(bitField.isSetNextAsyncId());
 
     }
 
     @Test
-    public void testAsyncId_first() throws Exception {
+    public void testAsyncId_first() {
         SpanEventBo spanEventBo = new SpanEventBo();
 
         spanEventBo.setAsyncId(1234);
         spanEventBo.setAsyncSequence((short) 1234);
 
         SpanEventBitField bitField = SpanEventBitField.buildFirst(spanEventBo);
-        Assert.assertTrue(bitField.isSetAsyncId());
+        Assertions.assertTrue(bitField.isSetAsyncId());
 
         bitField.setAsyncId(false);
-        Assert.assertFalse(bitField.isSetAsyncId());
+        Assertions.assertFalse(bitField.isSetAsyncId());
 
     }
 
     @Test
-    public void testStartElapsed_equals_next() throws Exception {
+    public void testStartElapsed_equals_next() {
         SpanEventBo prev = new SpanEventBo();
         SpanEventBo current = new SpanEventBo();
 
@@ -167,12 +163,12 @@ public class SpanEventBitFieldTest {
         current.setStartElapsed(1234);
 
         SpanEventBitField bitField = SpanEventBitField.build(current, prev);
-        Assert.assertEquals(bitField.getStartElapsedEncodingStrategy(), StartElapsedTimeEncodingStrategy.PREV_EQUALS);
+        Assertions.assertEquals(bitField.getStartElapsedEncodingStrategy(), StartElapsedTimeEncodingStrategy.PREV_EQUALS);
 
     }
 
     @Test
-    public void testStartElapsed_delta_next() throws Exception {
+    public void testStartElapsed_delta_next() {
         SpanEventBo prev = new SpanEventBo();
         SpanEventBo current = new SpanEventBo();
 
@@ -180,12 +176,12 @@ public class SpanEventBitFieldTest {
         current.setStartElapsed(1235);
 
         SpanEventBitField bitField = SpanEventBitField.build(current, prev);
-        Assert.assertEquals(bitField.getStartElapsedEncodingStrategy(), StartElapsedTimeEncodingStrategy.PREV_DELTA);
+        Assertions.assertEquals(bitField.getStartElapsedEncodingStrategy(), StartElapsedTimeEncodingStrategy.PREV_DELTA);
 
     }
 
     @Test
-    public void testSequence_add1_next() throws Exception {
+    public void testSequence_add1_next() {
         SpanEventBo prev = new SpanEventBo();
         SpanEventBo current = new SpanEventBo();
 
@@ -193,12 +189,12 @@ public class SpanEventBitFieldTest {
         current.setSequence((short) 11);
 
         SpanEventBitField bitField = SpanEventBitField.build(current, prev);
-        Assert.assertEquals(bitField.getSequenceEncodingStrategy(), SequenceEncodingStrategy.PREV_ADD1);
+        Assertions.assertEquals(bitField.getSequenceEncodingStrategy(), SequenceEncodingStrategy.PREV_ADD1);
 
     }
 
     @Test
-    public void testSequence_delta_next() throws Exception {
+    public void testSequence_delta_next() {
         SpanEventBo prev = new SpanEventBo();
         SpanEventBo current = new SpanEventBo();
 
@@ -206,12 +202,12 @@ public class SpanEventBitFieldTest {
         current.setSequence((short) 12);
 
         SpanEventBitField bitField = SpanEventBitField.build(current, prev);
-        Assert.assertEquals(bitField.getSequenceEncodingStrategy(), SequenceEncodingStrategy.PREV_DELTA);
+        Assertions.assertEquals(bitField.getSequenceEncodingStrategy(), SequenceEncodingStrategy.PREV_DELTA);
 
     }
 
     @Test
-    public void testDepth_equals_next() throws Exception {
+    public void testDepth_equals_next() {
         SpanEventBo prev = new SpanEventBo();
         SpanEventBo current = new SpanEventBo();
 
@@ -219,12 +215,12 @@ public class SpanEventBitFieldTest {
         current.setDepth(3);
 
         SpanEventBitField bitField = SpanEventBitField.build(current, prev);
-        Assert.assertEquals(bitField.getDepthEncodingStrategy(), DepthEncodingStrategy.PREV_EQUALS);
+        Assertions.assertEquals(bitField.getDepthEncodingStrategy(), DepthEncodingStrategy.PREV_EQUALS);
 
     }
 
     @Test
-    public void testDepth_raw_next() throws Exception {
+    public void testDepth_raw_next() {
         SpanEventBo prev = new SpanEventBo();
         SpanEventBo current = new SpanEventBo();
 
@@ -232,12 +228,12 @@ public class SpanEventBitFieldTest {
         current.setDepth(4);
 
         SpanEventBitField bitField = SpanEventBitField.build(current, prev);
-        Assert.assertEquals(bitField.getDepthEncodingStrategy(), DepthEncodingStrategy.RAW);
+        Assertions.assertEquals(bitField.getDepthEncodingStrategy(), DepthEncodingStrategy.RAW);
 
     }
 
     @Test
-    public void testServiceType_equals_next() throws Exception {
+    public void testServiceType_equals_next() {
         SpanEventBo prev = new SpanEventBo();
         SpanEventBo current = new SpanEventBo();
 
@@ -245,12 +241,12 @@ public class SpanEventBitFieldTest {
         current.setServiceType((short) 2000);
 
         SpanEventBitField bitField = SpanEventBitField.build(current, prev);
-        Assert.assertEquals(bitField.getServiceTypeEncodingStrategy(), ServiceTypeEncodingStrategy.PREV_EQUALS);
+        Assertions.assertEquals(bitField.getServiceTypeEncodingStrategy(), ServiceTypeEncodingStrategy.PREV_EQUALS);
 
     }
 
     @Test
-    public void testServiceType_raw_next() throws Exception {
+    public void testServiceType_raw_next() {
         SpanEventBo prev = new SpanEventBo();
         SpanEventBo current = new SpanEventBo();
 
@@ -258,7 +254,7 @@ public class SpanEventBitFieldTest {
         current.setServiceType((short) 2001);
 
         SpanEventBitField bitField = SpanEventBitField.build(current, prev);
-        Assert.assertEquals(bitField.getServiceTypeEncodingStrategy(), ServiceTypeEncodingStrategy.RAW);
+        Assertions.assertEquals(bitField.getServiceTypeEncodingStrategy(), ServiceTypeEncodingStrategy.RAW);
 
     }
 
