@@ -27,22 +27,21 @@ import com.navercorp.pinpoint.hbase.schema.reader.core.CreateTableChange;
 import com.navercorp.pinpoint.hbase.schema.reader.core.ModifyTableChange;
 import com.navercorp.pinpoint.hbase.schema.reader.core.TableChange;
 import com.navercorp.pinpoint.hbase.schema.reader.core.TableConfiguration;
-import org.apache.hadoop.hbase.HColumnDescriptor;
-import org.apache.hadoop.hbase.HTableDescriptor;
 import org.apache.hadoop.hbase.TableName;
-import org.junit.Test;
+import org.apache.hadoop.hbase.client.ColumnFamilyDescriptor;
+import org.apache.hadoop.hbase.client.ColumnFamilyDescriptorBuilder;
+import org.apache.hadoop.hbase.client.TableDescriptor;
+import org.apache.hadoop.hbase.client.TableDescriptorBuilder;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.contains;
-import static org.hamcrest.Matchers.equalTo;
-import static org.hamcrest.Matchers.is;
-import static org.hamcrest.Matchers.not;
-import static org.junit.Assert.fail;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.fail;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.never;
@@ -60,9 +59,9 @@ public class HbaseSchemaCommandManagerTest {
         String namespace = "namespace";
         String differentNamespace = "differentNamespace";
         String tableName = "table1";
-        HTableDescriptor sameNamespaceHtd = createHtd(namespace, tableName, "CF1");
-        HTableDescriptor differentNamespaceHtd = createHtd(differentNamespace, tableName, "CF1");
-        List<HTableDescriptor> htds = Arrays.asList(sameNamespaceHtd, differentNamespaceHtd);
+        TableDescriptor sameNamespaceHtd = createHtd(namespace, tableName, "CF1");
+        TableDescriptor differentNamespaceHtd = createHtd(differentNamespace, tableName, "CF1");
+        List<TableDescriptor> htds = List.of(sameNamespaceHtd, differentNamespaceHtd);
         HbaseSchemaCommandManager manager = new HbaseSchemaCommandManager(namespace, null, htds);
 
         ColumnFamilyChange createColumnFamilyChange = newColumnFamilyChange("CF2");
@@ -70,36 +69,49 @@ public class HbaseSchemaCommandManagerTest {
         ChangeSet modifyTableChangeSet = newChangeSet(modifyTableChange);
         manager.applyChangeSet(modifyTableChangeSet);
 
-        List<HTableDescriptor> schemaSnapshot = manager.getSchemaSnapshot();
-        assertThat(schemaSnapshot, contains(sameNamespaceHtd));
-        assertThat(schemaSnapshot, not(contains(differentNamespaceHtd)));
+        sameNamespaceHtd = addColumnFamily(sameNamespaceHtd, "CF2");
+        differentNamespaceHtd = addColumnFamily(differentNamespaceHtd, "CF2");
+        List<TableDescriptor> schemaSnapshot = manager.getSchemaSnapshot();
+        assertThat(schemaSnapshot)
+                .contains(sameNamespaceHtd)
+                .doesNotContain(differentNamespaceHtd);
     }
 
-    @Test(expected = InvalidHbaseSchemaException.class)
+    private TableDescriptor addColumnFamily(TableDescriptor tableDesc, String cf) {
+        TableDescriptorBuilder builder = TableDescriptorBuilder.newBuilder(tableDesc);
+        builder.setColumnFamily(ColumnFamilyDescriptorBuilder.of(cf));
+        return builder.build();
+    }
+
+    @Test
     public void creatingExistingTableShouldFail() {
-        String namespace = "namespace";
-        String tableName = "table";
-        HTableDescriptor existingTable = createHtd(namespace, tableName, "CF");
-        HbaseSchemaCommandManager manager = new HbaseSchemaCommandManager(namespace, null, Arrays.asList(existingTable));
+        Assertions.assertThrows(InvalidHbaseSchemaException.class, () -> {
+            String namespace = "namespace";
+            String tableName = "table";
+            TableDescriptor existingTable = createHtd(namespace, tableName, "CF");
+            HbaseSchemaCommandManager manager = new HbaseSchemaCommandManager(namespace, null, List.of(existingTable));
 
-        TableChange createTableChange = newTableChange(ChangeType.CREATE, tableName);
-        ChangeSet createTableChangeSet = newChangeSet(createTableChange);
+            TableChange createTableChange = newTableChange(ChangeType.CREATE, tableName);
+            ChangeSet createTableChangeSet = newChangeSet(createTableChange);
 
-        manager.applyChangeSet(createTableChangeSet);
+            manager.applyChangeSet(createTableChangeSet);
+        });
     }
 
-    @Test(expected = InvalidHbaseSchemaException.class)
+    @Test
     public void modifyingNonExistingTableShouldFail() {
-        String namespace = "namespace";
-        String tableName = "table";
-        String nonExistingTableName = "anotherTable";
-        HTableDescriptor existingTable = createHtd(namespace, tableName, "CF");
-        HbaseSchemaCommandManager manager = new HbaseSchemaCommandManager(namespace, null, Arrays.asList(existingTable));
+        Assertions.assertThrows(InvalidHbaseSchemaException.class, () -> {
+            String namespace = "namespace";
+            String tableName = "table";
+            String nonExistingTableName = "anotherTable";
+            TableDescriptor existingTable = createHtd(namespace, tableName, "CF");
+            HbaseSchemaCommandManager manager = new HbaseSchemaCommandManager(namespace, null, List.of(existingTable));
 
-        TableChange modifyTableChange = newTableChange(ChangeType.MODIFY, nonExistingTableName);
-        ChangeSet modifyTableChangeSet = newChangeSet(modifyTableChange);
+            TableChange modifyTableChange = newTableChange(ChangeType.MODIFY, nonExistingTableName);
+            ChangeSet modifyTableChangeSet = newChangeSet(modifyTableChange);
 
-        manager.applyChangeSet(modifyTableChangeSet);
+            manager.applyChangeSet(modifyTableChangeSet);
+        });
     }
 
     @Test
@@ -113,7 +125,7 @@ public class HbaseSchemaCommandManagerTest {
         TableChange createTableChange = newTableChange(ChangeType.CREATE, tableName, columnFamilyChange);
         ChangeSet createTableChangeSet = newChangeSet(createTableChange);
         manager.applyChangeSet(createTableChangeSet);
-        List<HTableDescriptor> initialSnapshot = manager.getSchemaSnapshot();
+        List<TableDescriptor> initialSnapshot = manager.getSchemaSnapshot();
 
         // modify non-existing table
         TableChange modifyNonExistingTableChange = newTableChange(ChangeType.MODIFY, "nonExistingTable", newColumnFamilyChange("newCF"));
@@ -122,8 +134,8 @@ public class HbaseSchemaCommandManagerTest {
             manager.applyChangeSet(modifyNonExistingTableChangeSet);
             fail("Expected an InvalidHbaseSchemaException to be thrown");
         } catch (InvalidHbaseSchemaException expected) {
-            List<HTableDescriptor> currentSnapshot = manager.getSchemaSnapshot();
-            assertThat(currentSnapshot, equalTo(initialSnapshot));
+            List<TableDescriptor> currentSnapshot = manager.getSchemaSnapshot();
+            assertThat(currentSnapshot).isEqualTo(initialSnapshot);
         }
 
         // create existing table
@@ -133,8 +145,8 @@ public class HbaseSchemaCommandManagerTest {
             manager.applyChangeSet(createExistingTableChangeSet);
             fail("Expected an InvalidHbaseSchemaException to be thrown");
         } catch (InvalidHbaseSchemaException expected) {
-            List<HTableDescriptor> currentSnapshot = manager.getSchemaSnapshot();
-            assertThat(currentSnapshot, equalTo(initialSnapshot));
+            List<TableDescriptor> currentSnapshot = manager.getSchemaSnapshot();
+            assertThat(currentSnapshot).isEqualTo(initialSnapshot);
         }
 
         // create existing column family
@@ -145,8 +157,8 @@ public class HbaseSchemaCommandManagerTest {
             manager.applyChangeSet(createExistingColumnFamilyChangeSet);
             fail("Expected an InvalidHbaseSchemaException to be thrown");
         } catch (InvalidHbaseSchemaException expected) {
-            List<HTableDescriptor> currentSnapshot = manager.getSchemaSnapshot();
-            assertThat(currentSnapshot, equalTo(initialSnapshot));
+            List<TableDescriptor> currentSnapshot = manager.getSchemaSnapshot();
+            assertThat(currentSnapshot).isEqualTo(initialSnapshot);
         }
     }
 
@@ -158,8 +170,8 @@ public class HbaseSchemaCommandManagerTest {
         String newColumnFamily1 = "CF1";
         String newColumnFamily2 = "CF2";
 
-        HTableDescriptor existingHtd = createHtd(namespace, tableName, existingColumnFamily);
-        HbaseSchemaCommandManager manager = new HbaseSchemaCommandManager(namespace, null, Arrays.asList(new HTableDescriptor(existingHtd)));
+        TableDescriptor existingHtd = createHtd(namespace, tableName, existingColumnFamily);
+        HbaseSchemaCommandManager manager = new HbaseSchemaCommandManager(namespace, null, List.of(TableDescriptorBuilder.newBuilder(existingHtd).build()));
 
         ChangeSet createColumnFamilyChangeSet1 = newChangeSet(newTableChange(ChangeType.MODIFY, tableName, newColumnFamilyChange(newColumnFamily1)));
         ChangeSet createColumnFamilyChangeSet2 = newChangeSet(newTableChange(ChangeType.MODIFY, tableName, newColumnFamilyChange(newColumnFamily2)));
@@ -167,23 +179,23 @@ public class HbaseSchemaCommandManagerTest {
         manager.applyChangeSet(createColumnFamilyChangeSet2);
 
         // verify schema snapshot
-        List<HTableDescriptor> schemaSnapshot = manager.getSchemaSnapshot();
-        assertThat(schemaSnapshot.size(), is(1));
-        HTableDescriptor snapshotTable = schemaSnapshot.get(0);
-        assertThat(snapshotTable.getTableName(), is(TableName.valueOf(namespace, tableName)));
-        List<String> snapshotColumnFamilies = snapshotTable.getFamilies().stream().map(HColumnDescriptor::getNameAsString).collect(Collectors.toList());
-        assertThat(snapshotColumnFamilies, contains(existingColumnFamily, newColumnFamily1, newColumnFamily2));
+        List<TableDescriptor> schemaSnapshot = manager.getSchemaSnapshot();
+        assertThat(schemaSnapshot).hasSize(1);
+        TableDescriptor snapshotTable = schemaSnapshot.get(0);
+        assertThat(snapshotTable.getTableName()).isEqualTo(TableName.valueOf(namespace, tableName));
+        List<String> snapshotColumnFamilies = Arrays.stream(snapshotTable.getColumnFamilies()).map(ColumnFamilyDescriptor::getNameAsString).collect(Collectors.toList());
+        assertThat(snapshotColumnFamilies).contains(existingColumnFamily, newColumnFamily1, newColumnFamily2);
 
         // verify command - should add 2 column families
         HbaseAdminOperation mockHbaseAdminOperation = Mockito.mock(HbaseAdminOperation.class);
         when(mockHbaseAdminOperation.getTableDescriptor(existingHtd.getTableName())).thenReturn(existingHtd);
-        doNothing().when(mockHbaseAdminOperation).addColumn(any(TableName.class), any(HColumnDescriptor.class));
-        doNothing().when(mockHbaseAdminOperation).createTable(any(HTableDescriptor.class));
+        doNothing().when(mockHbaseAdminOperation).addColumn(any(TableName.class), any(ColumnFamilyDescriptor.class));
+        doNothing().when(mockHbaseAdminOperation).createTable(any(TableDescriptor.class));
         for (TableCommand tableCommand : manager.getCommands()) {
             tableCommand.execute(mockHbaseAdminOperation);
         }
-        verify(mockHbaseAdminOperation, times(2)).addColumn(any(TableName.class), any(HColumnDescriptor.class));
-        verify(mockHbaseAdminOperation, never()).createTable(any(HTableDescriptor.class));
+        verify(mockHbaseAdminOperation, times(2)).addColumn(any(TableName.class), any(ColumnFamilyDescriptor.class));
+        verify(mockHbaseAdminOperation, never()).createTable(any(TableDescriptor.class));
     }
 
     @Test
@@ -205,21 +217,21 @@ public class HbaseSchemaCommandManagerTest {
         manager.applyChangeSet(addColumnFamilyChangeSet2);
 
         // verify schema snapshot
-        List<HTableDescriptor> schemaSnapshot = manager.getSchemaSnapshot();
-        assertThat(schemaSnapshot.size(), is(1));
-        HTableDescriptor snapshotTable = schemaSnapshot.get(0);
-        assertThat(snapshotTable.getTableName(), is(TableName.valueOf(namespace, tableName)));
-        List<String> snapshotColumnFamilies = snapshotTable.getFamilies().stream().map(HColumnDescriptor::getNameAsString).collect(Collectors.toList());
-        assertThat(snapshotColumnFamilies, contains(columnFamily1, columnFamily2, columnFamily3));
+        List<TableDescriptor> schemaSnapshot = manager.getSchemaSnapshot();
+        assertThat(schemaSnapshot).hasSize(1);
+        TableDescriptor snapshotTable = schemaSnapshot.get(0);
+        assertThat(snapshotTable.getTableName()).isEqualTo(TableName.valueOf(namespace, tableName));
+        List<String> snapshotColumnFamilies = Arrays.stream(snapshotTable.getColumnFamilies()).map(ColumnFamilyDescriptor::getNameAsString).collect(Collectors.toList());
+        assertThat(snapshotColumnFamilies).contains(columnFamily1, columnFamily2, columnFamily3);
 
         // verify command - should create 1 table (with all 3 column families)
         HbaseAdminOperation mockHbaseAdminOperation = Mockito.mock(HbaseAdminOperation.class);
         when(mockHbaseAdminOperation.tableExists(TableName.valueOf(namespace, tableName))).thenReturn(false);
-        doNothing().when(mockHbaseAdminOperation).createTable(any(HTableDescriptor.class));
+        doNothing().when(mockHbaseAdminOperation).createTable(any(TableDescriptor.class));
         for (TableCommand tableCommand : manager.getCommands()) {
             tableCommand.execute(mockHbaseAdminOperation);
         }
-        verify(mockHbaseAdminOperation, times(1)).createTable(any(HTableDescriptor.class));
+        verify(mockHbaseAdminOperation).createTable(any(TableDescriptor.class));
     }
 
     private ColumnFamilyChange newColumnFamilyChange(String cfName) {
@@ -227,27 +239,28 @@ public class HbaseSchemaCommandManagerTest {
     }
 
     private TableChange newTableChange(ChangeType changeType, String tableName, ColumnFamilyChange... cfChanges) {
-        List<ColumnFamilyChange> columnFamilyChanges = Arrays.asList(cfChanges);
-        switch (changeType) {
-            case CREATE:
-                return new CreateTableChange(tableName, TableConfiguration.EMPTY_CONFIGURATION, columnFamilyChanges, CreateTableChange.SplitOption.NONE);
-            case MODIFY:
-                return new ModifyTableChange(tableName, TableConfiguration.EMPTY_CONFIGURATION, columnFamilyChanges);
-            default:
-                throw new IllegalArgumentException("changeType : " + changeType + " not supported");
-        }
+        List<ColumnFamilyChange> columnFamilyChanges = List.of(cfChanges);
+        return switch (changeType) {
+            case CREATE ->
+                    new CreateTableChange(tableName, TableConfiguration.EMPTY_CONFIGURATION, columnFamilyChanges, CreateTableChange.SplitOption.NONE);
+            case MODIFY ->
+                    new ModifyTableChange(tableName, TableConfiguration.EMPTY_CONFIGURATION, columnFamilyChanges);
+            default -> throw new IllegalArgumentException("changeType : " + changeType + " not supported");
+        };
     }
 
     private ChangeSet newChangeSet(TableChange... tableChanges) {
-        return new ChangeSet("id", "value", Arrays.asList(tableChanges));
+        return new ChangeSet("id", "value", List.of(tableChanges));
     }
 
-    private HTableDescriptor createHtd(String namespace, String tableQualifier, String... columnFamilyNames) {
+    private TableDescriptor createHtd(String namespace, String tableQualifier, String... columnFamilyNames) {
         TableName tableName = TableName.valueOf(namespace, tableQualifier);
-        HTableDescriptor htd = new HTableDescriptor(tableName);
+        TableDescriptorBuilder builder = TableDescriptorBuilder.newBuilder(tableName);
+
         for (String columnFamilyName : columnFamilyNames) {
-            htd.addFamily(new HColumnDescriptor(columnFamilyName));
+            builder.setColumnFamily(ColumnFamilyDescriptorBuilder.of(columnFamilyName));
         }
-        return htd;
+
+        return builder.build();
     }
 }
