@@ -17,45 +17,38 @@
 package com.navercorp.pinpoint.web.controller;
 
 import com.navercorp.pinpoint.common.hbase.bo.ColumnGetCount;
-import com.navercorp.pinpoint.common.hbase.bo.ColumnGetCountFactory;
-import com.navercorp.pinpoint.common.profiler.sql.DefaultSqlParser;
-import com.navercorp.pinpoint.common.profiler.sql.OutputParameterParser;
-import com.navercorp.pinpoint.common.profiler.sql.SqlParser;
 import com.navercorp.pinpoint.common.profiler.util.TransactionId;
 import com.navercorp.pinpoint.common.profiler.util.TransactionIdUtils;
 import com.navercorp.pinpoint.common.server.bo.SpanBo;
 import com.navercorp.pinpoint.web.applicationmap.ApplicationMap;
 import com.navercorp.pinpoint.web.applicationmap.histogram.TimeHistogramFormat;
+import com.navercorp.pinpoint.web.applicationmap.service.FilteredMapService;
+import com.navercorp.pinpoint.web.applicationmap.service.FilteredMapServiceOption;
 import com.navercorp.pinpoint.web.calltree.span.CallTreeIterator;
 import com.navercorp.pinpoint.web.calltree.span.SpanFilters;
-import com.navercorp.pinpoint.web.calltree.span.TraceState;
-import com.navercorp.pinpoint.web.config.LogConfiguration;
-import com.navercorp.pinpoint.web.service.FilteredMapService;
-import com.navercorp.pinpoint.web.service.FilteredMapServiceOption;
 import com.navercorp.pinpoint.web.service.SpanResult;
 import com.navercorp.pinpoint.web.service.SpanService;
 import com.navercorp.pinpoint.web.service.TransactionInfoService;
-import com.navercorp.pinpoint.web.util.DefaultMongoJsonParser;
-import com.navercorp.pinpoint.web.util.MongoJsonParser;
-import com.navercorp.pinpoint.web.util.OutputParameterMongoJsonParser;
+import com.navercorp.pinpoint.web.validation.NullOrNotBlank;
+import com.navercorp.pinpoint.web.view.LogLinkBuilder;
+import com.navercorp.pinpoint.web.view.LogLinkView;
 import com.navercorp.pinpoint.web.view.TraceViewerDataViewModel;
 import com.navercorp.pinpoint.web.view.TransactionInfoViewModel;
 import com.navercorp.pinpoint.web.view.TransactionTimelineInfoViewModel;
 import com.navercorp.pinpoint.web.vo.callstacks.RecordSet;
-import org.apache.commons.text.StringEscapeUtils;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.PositiveOrZero;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
-import javax.servlet.http.HttpServletRequest;
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
-import java.util.List;
+import java.nio.charset.StandardCharsets;
 import java.util.Objects;
 import java.util.function.Predicate;
 
@@ -65,170 +58,166 @@ import java.util.function.Predicate;
  * @author Taejin Koo
  */
 @RestController
+@Validated
 public class BusinessTransactionController {
-    private final Logger logger = LoggerFactory.getLogger(this.getClass());
+    private final Logger logger = LogManager.getLogger(this.getClass());
 
     public static final String DEFAULT_FOCUS_TIMESTAMP = "0";
-    public static final String DEFAULT_SPANID = "-1"; // SpanId.NULL
+    public static final String DEFAULT_SPAN_ID = "-1"; // SpanId.NULL
+    private static final String SERVER_PREFIX = "api";
 
     private final SpanService spanService;
     private final TransactionInfoService transactionInfoService;
     private final FilteredMapService filteredMapService;
-    private final LogConfiguration logConfiguration;
+    private final LogLinkBuilder logLinkBuilder;
 
     @Value("${web.callstack.selectSpans.limit:-1}")
     private int callstackSelectSpansLimit;
 
-    private final SqlParser sqlParser = new DefaultSqlParser();
-    private final OutputParameterParser parameterParser = new OutputParameterParser();
-    private final MongoJsonParser mongoJsonParser = new DefaultMongoJsonParser();
-    private final OutputParameterMongoJsonParser parameterJsonParser = new OutputParameterMongoJsonParser();
 
-    public BusinessTransactionController(SpanService spanService, TransactionInfoService transactionInfoService,
-                                         FilteredMapService filteredMapService, LogConfiguration logConfiguration) {
+    public BusinessTransactionController(SpanService spanService,
+                                         TransactionInfoService transactionInfoService,
+                                         FilteredMapService filteredMapService,
+                                         LogLinkBuilder logLinkBuilder) {
         this.spanService = Objects.requireNonNull(spanService, "spanService");
         this.transactionInfoService = Objects.requireNonNull(transactionInfoService, "transactionInfoService");
         this.filteredMapService = Objects.requireNonNull(filteredMapService, "filteredMapService");
-        this.logConfiguration = Objects.requireNonNull(logConfiguration, "logConfiguration");
+        this.logLinkBuilder = Objects.requireNonNull(logLinkBuilder, "logLinkBuilder");
     }
 
     /**
      * info lookup for a selected transaction
      *
-     * @param traceId
-     * @param focusTimestamp
-     * @return
+     * @param traceId traceId
+     * @param focusTimestamp focusTimestamp
+     * @return TransactionInfoViewModel
      */
     @GetMapping(value = "/transactionInfo")
-    public TransactionInfoViewModel transactionInfo(@RequestParam("traceId") String traceId,
-                                                    @RequestParam(value = "focusTimestamp", required = false, defaultValue = DEFAULT_FOCUS_TIMESTAMP) long focusTimestamp,
-                                                    @RequestParam(value = "agentId", required = false) String agentId,
-                                                    @RequestParam(value = "spanId", required = false, defaultValue = DEFAULT_SPANID) long spanId,
-                                                    @RequestParam(value = "v", required = false, defaultValue = "0") int viewVersion,
-                                                    @RequestParam(value = "useStatisticsAgentState", required = false, defaultValue = "false") boolean useStatisticsAgentState,
-                                                    @RequestParam(value = "useLoadHistogramFormat", required = false, defaultValue = "false") boolean useLoadHistogramFormat) {
-        logger.debug("GET /transactionInfo params {traceId={}, focusTimestamp={}, agentId={}, spanId={}, v={}}", traceId, focusTimestamp, agentId, spanId, viewVersion);
+    public TransactionInfoViewModel transactionInfo(
+            @RequestParam("traceId") @NotBlank String traceId,
+            @RequestParam(value = "focusTimestamp", required = false, defaultValue = DEFAULT_FOCUS_TIMESTAMP)
+            @PositiveOrZero
+            long focusTimestamp,
+            @RequestParam(value = "agentId", required = false) @NotBlank String agentId,
+            @RequestParam(value = "spanId", required = false, defaultValue = DEFAULT_SPAN_ID) long spanId,
+            @RequestParam(value = "v", required = false, defaultValue = "0") int viewVersion,
+            @RequestParam(value = "useStatisticsAgentState", required = false, defaultValue = "false")
+            boolean useStatisticsAgentState,
+            @RequestParam(value = "useLoadHistogramFormat", required = false, defaultValue = "false")
+            boolean useLoadHistogramFormat
+    ) {
+        logger.debug("GET /transactionInfo params {traceId={}, focusTimestamp={}, agentId={}, spanId={}, v={}}",
+                traceId, focusTimestamp, agentId, spanId, viewVersion);
         final TransactionId transactionId = TransactionIdUtils.parseTransactionId(traceId);
-        final ColumnGetCount columnGetCount = ColumnGetCountFactory.create(callstackSelectSpansLimit);
+        final ColumnGetCount columnGetCount = ColumnGetCount.of(callstackSelectSpansLimit);
 
-        Predicate<SpanBo> spanMatchFilter = SpanFilters.spanFilter(spanId, agentId, focusTimestamp);
+        final Predicate<SpanBo> spanMatchFilter = SpanFilters.spanFilter(spanId, agentId, focusTimestamp);
         // select spans
         final SpanResult spanResult = this.spanService.selectSpan(transactionId, spanMatchFilter, columnGetCount);
         final CallTreeIterator callTreeIterator = spanResult.getCallTree();
 
         // application map
-        FilteredMapServiceOption.Builder optionBuilder = new FilteredMapServiceOption.Builder(transactionId, viewVersion, columnGetCount);
-        final FilteredMapServiceOption option = optionBuilder.setUseStatisticsAgentState(useStatisticsAgentState).build();
-        ApplicationMap map = filteredMapService.selectApplicationMap(option);
+        final FilteredMapServiceOption.Builder optionBuilder =
+                new FilteredMapServiceOption.Builder(transactionId, viewVersion, columnGetCount);
+        final FilteredMapServiceOption option =
+                optionBuilder.setUseStatisticsAgentState(useStatisticsAgentState).build();
+        final ApplicationMap map = filteredMapService.selectApplicationMap(option);
 
-        RecordSet recordSet = this.transactionInfoService.createRecordSet(callTreeIterator, spanMatchFilter);
+        final RecordSet recordSet = this.transactionInfoService.createRecordSet(callTreeIterator, spanMatchFilter);
 
-        TransactionInfoViewModel result;
-        if (spanResult.getTraceState() == TraceState.State.PROGRESS && columnGetCount.isreachedLimit()) {
-            result = new TransactionInfoViewModel(transactionId, spanId, map.getNodes(), map.getLinks(), recordSet, TraceState.State.OVERFLOW, logConfiguration);
-        } else {
-            result = new TransactionInfoViewModel(transactionId, spanId, map.getNodes(), map.getLinks(), recordSet, spanResult.getTraceState(), logConfiguration);
-        }
+
+        final TransactionInfoViewModel result = newTransactionInfo(spanId, transactionId, spanResult, map, recordSet);
+
         if (useLoadHistogramFormat) {
             result.setTimeHistogramFormat(TimeHistogramFormat.V2);
         }
         return result;
     }
 
+    private TransactionInfoViewModel newTransactionInfo(long spanId,
+                                                        TransactionId transactionId,
+                                                        SpanResult spanResult,
+                                                        ApplicationMap map,
+                                                        RecordSet recordSet) {
+        final LogLinkView logLinkView = logLinkBuilder.build(
+                transactionId,
+                spanId,
+                recordSet.getApplicationId(),
+                recordSet.getStartTime()
+        );
+
+        return new TransactionInfoViewModel(
+                transactionId,
+                spanId,
+                map.getNodes(),
+                map.getLinks(),
+                recordSet,
+                spanResult.getTraceState(),
+                logLinkView
+        );
+    }
+
     /**
      * info lookup for a selected transaction
      *
-     * @param traceId
-     * @param focusTimestamp
-     * @return
+     * @param traceId traceId
+     * @param focusTimestamp focusTimestamp
+     * @return TransactionTimelineInfoViewModel
      */
     @GetMapping(value = "/transactionTimelineInfo")
-    public TransactionTimelineInfoViewModel transactionTimelineInfo(HttpServletRequest request,
-                                                                    @RequestParam("traceId") String traceId,
-                                                                    @RequestParam(value = "focusTimestamp", required = false, defaultValue = DEFAULT_FOCUS_TIMESTAMP) long focusTimestamp,
-                                                                    @RequestParam(value = "agentId", required = false) String agentId,
-                                                                    @RequestParam(value = "spanId", required = false, defaultValue = DEFAULT_SPANID) long spanId) {
+    public TransactionTimelineInfoViewModel transactionTimelineInfo(
+            @RequestParam("traceId") @NotBlank String traceId,
+            @RequestParam(value = "focusTimestamp", required = false, defaultValue = DEFAULT_FOCUS_TIMESTAMP)
+            @PositiveOrZero
+            long focusTimestamp,
+            @RequestParam(value = "agentId", required = false) @NullOrNotBlank String agentId,
+            @RequestParam(value = "spanId", required = false, defaultValue = DEFAULT_SPAN_ID) long spanId
+    ) {
         logger.debug("GET /transactionTimelineInfo params {traceId={}, focusTimestamp={}, agentId={}, spanId={}}",
                 traceId, focusTimestamp, agentId, spanId);
         final TransactionId transactionId = TransactionIdUtils.parseTransactionId(traceId);
-        final ColumnGetCount columnGetCount = ColumnGetCountFactory.create(callstackSelectSpansLimit);
+        final ColumnGetCount columnGetCount = ColumnGetCount.of(callstackSelectSpansLimit);
 
         // select spans
-        Predicate<SpanBo> spanMatchFilter = SpanFilters.spanFilter(spanId, agentId, focusTimestamp);
-        SpanResult spanResult = this.spanService.selectSpan(transactionId, spanMatchFilter, columnGetCount);
+        final Predicate<SpanBo> spanMatchFilter = SpanFilters.spanFilter(spanId, agentId, focusTimestamp);
+        final SpanResult spanResult = this.spanService.selectSpan(transactionId, spanMatchFilter, columnGetCount);
         final CallTreeIterator callTreeIterator = spanResult.getCallTree();
 
-        String traceViewerDataURL = null;
-        try {
-            traceViewerDataURL = ServletUriComponentsBuilder.fromRequestUri(request)
-                    .replacePath("traceViewerData.pinpoint")
-                    .queryParam("traceId", URLEncoder.encode(traceId,"UTF-8"))
-                    .queryParam("focusTimestamp", focusTimestamp)
-                    .queryParam("agentId", URLEncoder.encode(agentId,"UTF-8"))
-                    .queryParam("spanId", spanId)
-                    .build()
-                    .toUriString();
-        } catch (UnsupportedEncodingException e) {
-            logger.error(e.getMessage(), e);
-        }
+        final String traceViewerDataURL = ServletUriComponentsBuilder.fromPath(SERVER_PREFIX + "/traceViewerData")
+                .queryParam("traceId", URLEncoder.encode(traceId, StandardCharsets.UTF_8))
+                .queryParam("focusTimestamp", focusTimestamp)
+                .queryParam("agentId", URLEncoder.encode(agentId, StandardCharsets.UTF_8))
+                .queryParam("spanId", spanId)
+                .build()
+                .toUriString();
 
-        RecordSet recordSet = this.transactionInfoService.createRecordSet(callTreeIterator, spanMatchFilter);
-        TransactionTimelineInfoViewModel result = new TransactionTimelineInfoViewModel(transactionId, spanId, recordSet, traceViewerDataURL, logConfiguration);
-        return result;
+        final RecordSet recordSet = this.transactionInfoService.createRecordSet(callTreeIterator, spanMatchFilter);
+        return new TransactionTimelineInfoViewModel(transactionId, recordSet, traceViewerDataURL);
     }
 
     @GetMapping(value = "/traceViewerData")
-    public TraceViewerDataViewModel traceViewerData(@RequestParam("traceId") String traceIdParam,
-                                                    @RequestParam(value = "focusTimestamp", required = false, defaultValue = "0") long focusTimestamp,
-                                                    @RequestParam(value = "agentId", required = false) String agentId,
-                                                    @RequestParam(value = "spanId", required = false, defaultValue = "-1") long spanId) {
-        logger.debug("GET /traceViewerData params {traceId={}, focusTimestamp={}, agentId={}, spanId={}, v={}}", traceIdParam, focusTimestamp, agentId, spanId);
+    public TraceViewerDataViewModel traceViewerData(
+            @RequestParam("traceId") @NotBlank String traceIdParam,
+            @RequestParam(value = "focusTimestamp", required = false, defaultValue = "0") @PositiveOrZero
+            long focusTimestamp,
+            @RequestParam(value = "agentId", required = false) @NullOrNotBlank String agentId,
+            @RequestParam(value = "spanId", required = false, defaultValue = "-1") long spanId
+    ) {
+        logger.debug("GET /traceViewerData params {traceId={}, focusTimestamp={}, agentId={}, spanId={}}",
+                traceIdParam, focusTimestamp, agentId, spanId);
 
         final TransactionId transactionId = TransactionIdUtils.parseTransactionId(traceIdParam);
 
-        final ColumnGetCount columnGetCount = ColumnGetCountFactory.create(callstackSelectSpansLimit);
+        final ColumnGetCount columnGetCount = ColumnGetCount.of(callstackSelectSpansLimit);
 
         // select spans
-        Predicate<SpanBo> spanMatchFilter = SpanFilters.spanFilter(spanId, agentId, focusTimestamp);
-        SpanResult spanResult = this.spanService.selectSpan(transactionId, spanMatchFilter, columnGetCount);
+        final Predicate<SpanBo> spanMatchFilter = SpanFilters.spanFilter(spanId, agentId, focusTimestamp);
+        final SpanResult spanResult = this.spanService.selectSpan(transactionId, spanMatchFilter, columnGetCount);
         final CallTreeIterator callTreeIterator = spanResult.getCallTree();
 
-        RecordSet recordSet = this.transactionInfoService.createRecordSet(callTreeIterator, spanMatchFilter);
-        TraceViewerDataViewModel result = new TraceViewerDataViewModel(recordSet);
-        return result;
+        final RecordSet recordSet = this.transactionInfoService.createRecordSet(callTreeIterator, spanMatchFilter);
+        return new TraceViewerDataViewModel(recordSet);
     }
 
-    @PostMapping(value = "/bind")
-    public String metaDataBind(@RequestParam("type") String type,
-                               @RequestParam("metaData") String metaData,
-                               @RequestParam("bind") String bind) {
-        if (logger.isDebugEnabled()) {
-            logger.debug("POST /bind params {metaData={}, bind={}}", metaData, bind);
-        }
 
-        if (metaData == null) {
-            return "";
-        }
-
-        List<String> bindValues;
-        String combinedResult = "";
-
-        if (type.equals("sql")) {
-            bindValues = parameterParser.parseOutputParameter(bind);
-            combinedResult = sqlParser.combineBindValues(metaData, bindValues);
-        } else if (type.equals("mongoJson")) {
-            bindValues = parameterJsonParser.parseOutputParameter(bind);
-            combinedResult = mongoJsonParser.combineBindValues(metaData, bindValues);
-        }
-
-        if (logger.isDebugEnabled()) {
-            logger.debug("Combined result={}", combinedResult);
-        }
-
-        if (type.equals("mongoJson")) {
-            return StringEscapeUtils.unescapeHtml4(combinedResult);
-        }
-
-        return StringEscapeUtils.escapeHtml4(combinedResult);
-    }
 }
